<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlashCard">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FlashCards">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="294dp"
            android:layout_height="336dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:gravity="center"
                android:text="@string/math_section" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="294dp"
                android:layout_height="276dp"
                android:layout_gravity="bottom|center"
                android:gravity="center"
                android:text="@string/card_question_content" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_answer"
            android:layout_width="146dp"
            android:layout_height="44dp"
            android:text="@string/Flip"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="146dp"
            android:layout_height="43dp"
            android:layout_marginTop="1dp"
            android:text="@string/Back"
            app:layout_constraintEnd_toStartOf="@+id/btn_answer"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>