<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlashCards">



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="294dp"
        android:layout_height="336dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:gravity="center"
                android:text="@string/card_title" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="294dp"
                android:layout_height="276dp"
                android:layout_gravity="bottom|center"
                android:gravity="center"
                android:text="@string/card_question_content" />
    </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button"
            android:layout_width="146dp"
            android:layout_height="44dp"
            android:text="@string/Answer"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <Button
            android:id="@+id/button2"
            android:layout_width="146dp"
            android:layout_height="43dp"
            android:layout_marginTop="1dp"
            android:text="@string/Back"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>